--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "chromedriver": "^2.35.0",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.2",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2"
   },
