--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.1.0",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.2",
+    "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1",
     "vue-swiper-component": "^1.0.5",
     "vue-video-player": "^5.0.2"
