--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.2",
-    "vue-cropper": "^0.2.9",
+    "vue-croppa": "^1.2.0",
     "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1",
     "vue-swiper-component": "^1.0.5",
