--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "better-scroll": "^1.8.2",
     "chromedriver": "^2.35.0",
     "element-ui": "^2.1.0",
     "hammerjs": "^2.0.8",
