--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "element-ui": "^2.1.0",
     "hammerjs": "^2.0.8",
     "mint-ui": "^2.2.13",
+    "scrollreveal": "^3.3.6",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.2",
     "vue-croppa": "^1.2.0",
     "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1",
     "vue-swiper-component": "^1.0.5",
-    "vue-video-player": "^5.0.2"
+    "vue-video-player": "^5.0.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
